--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-calvario de css
-no conzco nada pero ms rive este archivo
+<html>
+	<head>
+		<title>This is my first File</title>
+	</head>
+	<body>
+		<h1>This is my first file</h1>
 
+		<p>this is a parragraph</p>
+	</body>
+</html>
